Fri Mar 17 20:24:51 1995  John Gilmore  (gnu at toad.com)

	* Makefile.in (LDFLAGS):  Zap duplicate.
	(all-mac):  Add.

Tue Mar  7 19:57:50 1995  Mark Eichin  <eichin@cygnus.com>

	* configure.in: take out ISODE_INCLUDE.

Tue Mar 7 12:30:45 1995 Keith Vetter (keithv@fusion.com)

	* syslog.c: a disabled stub provided for satisfying the linker
           on the pc.
        * Makefile.in: made to work on the pc but only for syslog.c

Tue Feb 28 01:05:42 1995  John Gilmore  (gnu at toad.com)

	* daemon.c, memmove.c, strcasecmp.c, strdup.c:  Avoid <krb5/...>
	includes.
	* memmove.c:  Use HAS_SYS_TYPES_H.

Thu Dec 22 16:33:02 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: 
	* strcasecmp.c: Add strcasecmp replacement if necessary.

	* daemon.c:
	* memmove.c: Add #include for <sys/types.h>

Wed Dec  7 00:01:59 1994    <tytso@rsx-11.mit.edu>

	* configure.in: Add check for HAS_SETSID test for daemon.c

Sat Jul 16 01:24:01 1994  Tom Yu  (tlyu at dragons-lair)

	* daemon.c: <fcntl.h>, not <sys/fcntl.h>

Tue Jun 21 00:52:24 1994  Mark W. Eichin  (eichin at mit.edu)

	* configure.in: add AC_CONST for v*printf.

Mon Jun 20 19:37:38 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* memmove.c: #include <krb5/config.h> so that build works using imake.
