@@ -1,0 +1,7 @@
+/* Very simple getuid() for systems that don't have one.  */
+
+int
+getuid()
+{
+	return 42;
+}
